    + [CL] Emit new empty-section-field tag instead of uninitialized value
      warnings on an empty "Section:" field.  (Closes: #878515)
  * checks/init.d.pm:
    + [CL] Check for files that use content from the /etc/init.d/skeleton
      template. Thanks to Christoph Biedl for the idea.  (Closes: #879152)
  * checks/md5sums.pm:
    + [CL] Allow empty md5sums files.  (Closes: #781372)
  * checks/source-changelog.{desc.pm}:
    + [CL] Move latest-debian-changelog-entry-without-new-date tag into a
      new check of type "source".  (Closes: #873612)
  * checks/watch-file.pm:
    + [CL] Include the offending URI in debian-watch-uses-insecure-uri
      output, not the line number.
    + [CL] Ignore the magic http://sf.net/ redirector URI for the
      debian-watch-uses-insecure-uri tag.  (Closes: #879206)

  * data/common/source-fields:
    + [NT] Add "Rules-Requires-Root".
  * data/fields/essential:
    + [CL] Apply patch from Helmut Grohne <helmut@subdivi.de> to treat
      e2fsprogs as non-essential.  (Closes: #878518)
  * data/scripts/interpreters:
    + [CL] Add cwl-runner to the list of interpreters.  (Closes: #851126)
  * data/spelling/corrections:
    + [CL] Revert addition of "none were" -> "none was" multiword spelling
      correction as it is "acceptable beyond serious criticism".
      (Closes: #878457)

  * debian/control:
    + [NT] Set R³ to "no".  Lintian builds fine without root and
      Build-Depends on fakeroot for the tests that still require
      fakeroot.

  * doc/lintian.xml, checks/{fields,files,menu-format}.desc, etc.:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      a large number of errors in links.  (Closes: #878521)

  * private/refresh-manual-refs:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      the Debconf reference mapping. Many thanks!  (Closes: #878449)
    + [CL] Apply a patch series from Ville Skyttä <ville.skytta@iki.fi>