@@ -1,0 +1,5 @@
+Testname: rules-sets-dpkg-architecture-variable
+Version: 1.0
+Description: Test for unnecessary dpkg-architecture assignments
+Test-For:
+ debian-rules-sets-dpkg-architecture-variable
