@@ -1,0 +1,2 @@
+W: rules-sets-dpkg-architecture-variable source: debian-rules-sets-dpkg-architecture-variable DEB_BUILD_ARCH (line 4)
+W: rules-sets-dpkg-architecture-variable source: debian-rules-sets-dpkg-architecture-variable DEB_HOST_ARCH (line 3)
